# SlackMenu

./: README.md  SlackMenu.cabal  slack.cfg.example  stack.yaml
src/: Main.hs
src/SlackMenu/: Config.hs  Slack.hs  Types.hs
