name:                SlackMenu
version:             0.1.0.0
synopsis:            Sonaatti restaurant menus to Slack.
description:         Please see README.md
homepage:            http://github.com/Lepovirta/SlackMenu#readme
license:             BSD3
license-file:        LICENSE
author:              Matias Keveri
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable slackMenu
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       SlackMenu.Slack, SlackMenu.Config, SlackMenu.Types
  default-language:    Haskell2010
  build-depends:
    base  >= 4.7 && < 5,
    wreq  >= 0.4,
    lens  >= 4.12,
    aeson >= 0.8,
    text  >= 1.2,
    SonaattiMenu >= 0.1,
    configurator >= 0.3
